--- a/views/master.jade
+++ b/views/master.jade
@@ -20,7 +20,6 @@ html
     script(src="./js/bootstrap.bundle.min.js")  
     
     footer.text-center.text-lg-start.footer
-      div.text-center.p-3(style="background-color: rgba(0, 0, 0, 0.2);")
-        © 2023 Copyright:
+      div.text-center.p-3(style="background-color: rgba(0, 0, 0, 0.2);") &copy; 2023 Copyright:
         a.text-dark(href="https://abhilashwebdeveloper.com/") By Abhilash N
 
