fixed registration page

--- a/views/register.jade
+++ b/views/register.jade
@@ -3,7 +3,8 @@ extends master.jade
 block content
   .container 
     .row 
-      .col-md-6 
+      .col-md-6.d-flex.content-align-center 
+        img.img-fluid(src="./images/chat-msg-reg-page.svg", alt="chat messenger illustration")
       .col-md-6
         .register-heading 
           img.logo.me-3(src="./images/logo.svg" alt="simlichat logo")
