--- a/views/master.jade
+++ b/views/master.jade
@@ -3,6 +3,7 @@ html
     title= title
     link(rel="stylesheet",type="text/css",href="./css/bootstrap.min.css")
     link(rel="stylesheet",type="text/css",href="./css/style.css")
+    link(rel='stylesheet', href='./css/bootstrap-icons.css')
   body
     header.d-flex.flex-wrap.justify-content-center.py-3.border-bottom.simpli-nav
       a.d-flex.align-items-center.mb-3.mb-md-0.me-md-auto.text-dark.text-decoration-none(href="/")
