--- a/views/master.jade
+++ b/views/master.jade
@@ -30,6 +30,7 @@ html
       block content
 
     script(src="./js/bootstrap.bundle.min.js")  
+    script(src="./js/app.js")
     
     footer.text-center.text-lg-start.footer
       div.text-center.p-3(style="background-color: rgba(0, 0, 0, 0.2);") &copy; 2023 Copyright:
