--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -9,14 +9,11 @@ block content
                     ul.nav.nav-pills.flex-column.mb-auto
                         li
                             a.nav-link.link-dark.active.active-mnu(href="/dashboard") 
-                                i.bi.bi-speedometer2.me-2
-                                | Dashboard
+                                i.bi.bi-chat.me-2
+                                | Chat Board
                             a.nav-link.link-dark(href="/contacts") 
                                 i.bi.bi-person-vcard-fill.me-2
                                 | Contacts
-                            a.nav-link.link-dark(href="/messages") 
-                                i.bi.bi-chat.me-2
-                                | Messages
                             a.nav-link.link-dark(href="/logout") 
                                 i.bi.bi-power.me-2
                                 | Logout
