--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,3 +220,5 @@ color: #FFF; display: flex; }
 .chat-history .my-message {
     background: #efefef;
 }
+
+.chat-delete-icon { color: red; float: right; cursor: pointer; }
